tests/ui/lang/issue-46.stderr
error: cannot cast between pointer types
       from `*i32`
         to `*[i32; 2]`
  --> $DIR/issue-46.rs:13:13
   |
13 |     let x = [[1; 2]; 1];
   |             ^^^^^^^^^^^
   |
note: used from within `issue_46::main`
  --> $DIR/issue-46.rs:13:13
   |
13 |     let x = [[1; 2]; 1];
   |             ^^^^^^^^^^^
note: called by `main`
  --> $DIR/issue-46.rs:12:8
   |
12 | pub fn main() {
   |        ^^^^

error: cannot cast between pointer types
       from `*[[u32; 2]; 1]`
         to `*struct Foo { baz: [[u32; 2]; 1], bar: bool }`
  --> $DIR/issue-46.rs:14:13
   |
14 |     let y = [Foo::default(); 1];
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: used from within `issue_46::main`
  --> $DIR/issue-46.rs:14:13
   |
14 |     let y = [Foo::default(); 1];
   |             ^^^^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/issue-46.rs:12:8
   |
12 | pub fn main() {
   |        ^^^^

error: aborting due to 2 previous errors

